[package]
name = "ultra_low_latency_engine"
version = "0.1.0"
edition = "2021"
authors = ["Ultimate Arbitrage System"]
description = "Ultra-low latency trading execution engine with <10μs performance"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.dev]
opt-level = 1

[dependencies]
# Async runtime - tokio for high-performance async
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "time", "net", "io-util", "fs", "signal", "process", "sync", "parking_lot"] }

# Concurrency primitives
crossbeam = { version = "0.8", features = ["std"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
crossbeam-queue = "0.3"

# Lock-free data structures
lockfree = "0.5"
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Memory management
bytes = "1.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# NATS JetStream for event sourcing
async-nats = "0.33"

# SIMD operations
simd-json = "0.13"
wide = "0.7"

# GPU computing (optional)
# rustacuda = { version = "0.1", optional = true }
# ocl = { version = "0.19", optional = true }

# Numerical computing
ndarray = "0.15"

# Ring buffer implementation
ringbuf = "0.3"

# Memory profiling
tracemalloc = "0.1"

# Configuration
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Atomic operations
atomic = "0.6"

# Statistics
statrs = "0.16"

# Exchange adapter dependencies
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.4"

[features]
default = ["simd"]
simd = []
gpu = []
# gpu = ["rustacuda", "ocl"]

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.11"
wiremock = "0.5"
test-log = "0.2"
env_logger = "0.10"
tempy = "0.3"
once_cell = "1.17"
rstest = "0.18"
serial_test = "3.0"
insta = "1.0"  # Snapshot testing
similar-asserts = "1.4"  # Better assertion output

[build-dependencies]
cc = "1.0"

# Test configuration for 95% coverage
[profile.test]
opt-level = 2
debug = true
overflow-checks = true

# Benchmark configuration
[[bench]]
name = "orderbook_bench"
harness = false
path = "benches/orderbook_bench.rs"

[[bench]]
name = "engine_bench"
harness = false
path = "benches/engine_bench.rs"

[[bench]]
name = "disruptor_bench"
harness = false
path = "benches/disruptor_bench.rs"

# Integration tests
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "exchange_adapter_tests"
path = "tests/exchange_adapter_tests.rs"

[[test]]
name = "performance_tests"
path = "tests/performance_tests.rs"

# Example binaries for testing
[[example]]
name = "engine_demo"
path = "examples/engine_demo.rs"

[[example]]
name = "exchange_simulation"
path = "examples/exchange_simulation.rs"

